Implement activation with processbuilder, change readme with more details and fix activation trigger in iss properly